<resources>
    <string name="app_name">WarehouseStockControlApp</string>
    <string name="enter_button">Enter</string>
    <string name="id_input_box">Enter ID</string>
    <string name="password_input_box">Enter Password</string>
    <string name="cancel_button">Cancel</string>
    <string name="log_in_label">Log In</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="idInputBoxLabel">ID:</string>
    <string name="passwordInputLabel">Password:</string>
    <string name="select_label">Please select...</string>
    <string name="admin_button">Administrator</string>
    <string name="operative_button">Operative</string>
    <string name="admin_log_in_label">Please log in...</string>
    <string name="add_remove_user">Add/Remove User</string>
    <string name="add_remove_customer">Add/Remove Customer</string>
    <string name="putaway_stock">Putaway Stock</string>
    <string name="find_stock">Find/Move Stock</string>
    <string name="stock_check">Stock Check</string>
    <string name="stock_report">Report Data</string>
    <string name="pick_list">Pick List</string>
    <string name="empty_locations">Empty Locations</string>
    <string name="choose_user_type">Choose user type...</string>
    <string name="name_label">Name:</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="remove_admin_label">Please enter the ID of the user to be removed...</string>
    <string name="remove_user_admin">Remove User</string>
    <string name="log_out_button">Log Out</string>
    <string name="add_customer">Add Customer</string>
    <string name="remove_customer">Remove Customer</string>
    <string name="customer_details_label">New customer details...</string>
    <string name="depot_label">Depot:</string>
    <string name="remove_customer_details_label">Remove Customer</string>
    <string name="putaway_label">Step 1: Create pallet</string>
    <string name="choose_customer_label">Choose customer:</string>
    <string name="choose_quantity_label">Quantity:</string>
    <string name="choose_aisle_label">Select aisle...</string>
    <string name="aisle_m_button">M</string>
    <string name="aisle_g_button">G</string>
    <string name="aisle_h_button">H</string>
    <string name="aisle_i_button">I</string>
    <string name="aisle_j_button">J</string>
    <string name="aisle_k_button">K</string>
    <string name="aisle_L_button">L</string>
    <string name="exit_button">Exit</string>
    <string name="choose_location_label">Choose location...</string>
    <string name="level_label">Level:</string>
    <string name="location_label">Location:</string>
    <string name="remove_stock_button">Remove Stock</string>
    <string name="move_stock_button">Move Stock</string>
    <string name="choose_location_label_v2">Choose location:</string>
    <string name="aisle_label">Aisle:</string>
    <string name="add_remove_stock">Add/Remove Stock</string>
    <string name="find_stock_button">Find Stock</string>
    <string name="add_stock">Add Stock</string>
    <string name="remove_stock">Remove Stock</string>
    <string name="customer_label">Customer:</string>
    <string name="stock_check_label">Stock Check</string>
    <string name="finish_button">Finish</string>
    <string name="stock_report_header">Stock Reports</string>
    <string name="stock_holding_button">Stock Holding</string>
    <string name="empty_locations_button">Empty Locations</string>
    <string name="activity_log_button">Activity Log</string>
    <string name="pick_list_label">Generate Pick List</string>
    <string name="number_of_pallets_label">No. of pallets:</string>
    <string name="move_pallet_header">Move Stock</string>
    <string name="please_select_pallet_header">Please select the pallet to be moved...</string>
    <string name="new_location">New Location</string>
    <string name="new_location_choose">Please select the new location...</string>
    <string name="activity_log">Activity Log</string>
</resources>
